--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.redhat</groupId>
-  <artifactId>camel-fabric8-voxxedlu</artifactId>
+  <artifactId>camel-fabric8-voxxedlu2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>Fabric8 :: Quickstarts :: Spring-Boot :: Camel XML</name>
